# subswap

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.ja.md  README.ko.md  README.md  README.zh-CN.md  install.ps1
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  daemon_spawn.rs  main.rs  render.rs
crates/cli/src/cmd/: add_api.rs  autoswap.rs  default.rs  doctor.rs  login.rs  migrate.rs  mod.rs  rm.rs  run.rs  swap.rs
crates/cli/tests/: cli_surface.rs
crates/core/: Cargo.toml
crates/core/src/: account_registry.rs  audit.rs  auto_policy.rs  checkout.rs  defaults.rs  error.rs  lib.rs  model.rs  paths.rs  provider.rs  quota_cache.rs  quota_query.rs  registry.rs  settings.rs  store.rs  swap.rs  time.rs
crates/core/tests/: auto_policy_integration.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: lib.rs  main.rs  state.rs  unix.rs
crates/providers/claude/: Cargo.toml
crates/providers/claude/src/: claude_files.rs  lib.rs  oauth.rs  paths.rs
crates/providers/codex/: Cargo.toml
crates/providers/codex/src/: app_server.rs  codex_files.rs  legacy.rs  lib.rs  openai_usage.rs  paths.rs  quota.rs  runtime.rs
crates/providers/common/: Cargo.toml
crates/providers/common/src/: engine.rs  isolated.rs  json.rs  lib.rs  runtime.rs
crates/providers/cursor/: Cargo.toml
crates/providers/cursor/src/: lib.rs  tests.rs
crates/providers/kimi/: Cargo.toml
crates/providers/kimi/src/: kimi_files.rs  kimi_usage.rs  lib.rs  oauth.rs  paths.rs
docs/: CLI.md  CONFIG.md  OPERATIONS_GUIDE.md  OVERVIEW.md  PROVIDER_KNOWLEDGE_BASE.md  ROADMAP.md
docs/design/: ACCOUNT_ISOLATION_DESIGN.md  ARCHITECTURE.md  AUTO_SWAP_DESIGN.md  PREWARM_DESIGN.md
docs/superpowers/plans/: 2026-07-17-kimi-provider-and-shared-engine.md
docs/superpowers/specs/: 2026-07-17-kimi-provider-and-shared-engine-design.md
docs/troubleshooting/: 2026-05-28-claude-config-dir-parent-pollution.md  2026-05-28-toml-null-serialization.md  2026-05-29-daemon-keyutils-session-isolation.md  2026-05-29-macos-keychain-prompts.md  2026-06-06-filestore-credential-backend.md  2026-06-08-codex-refresh-token-already-used.md  2026-06-11-claude-code-keychain-acl-poisoning.md  2026-06-14-claude-quota-unqueryable-429-vs-invalid-grant.md  2026-06-18-live-capture-clobbers-refresh-token.md  2026-07-09-codex-quota-401-despite-working-cli.md  TROUBLESHOOTING_INDEX.md
