[package]
name = "subswap-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "subswap core: data model, Provider trait, credential store, paths"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
async-trait.workspace = true
tracing.workspace = true
keyring.workspace = true
directories.workspace = true
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
