[package]
name = "subswap-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "subswapd: background daemon that polls quotas and auto-swaps accounts"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "subswapd"
path = "src/main.rs"

[dependencies]
subswap-core.workspace = true
subswap-provider-claude.workspace = true
subswap-provider-codex.workspace = true
subswap-provider-kimi.workspace = true
subswap-provider-common.workspace = true

anyhow.workspace = true
chrono.workspace = true
fs2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
