[package]
name = "subswap-provider-claude"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "subswap Claude / Anthropic provider"

[dependencies]
subswap-core.workspace = true

anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
directories.workspace = true
chrono.workspace = true
fs2.workspace = true
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
