[package]
name = "subswap-provider-claude"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "subswap Claude / Anthropic provider"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
subswap-core.workspace = true

anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
directories.workspace = true
chrono.workspace = true
tokio = { workspace = true }
sha2.workspace = true

# macOS 凭证读写改为 fork `/usr/bin/security`，不再依赖 keyring crate：
# keyring 写入会把 Keychain item 的 ACL 设为「仅 subswap」，导致 Claude Code 反复弹授权框。

[dev-dependencies]
tempfile = "3"
