[package]
name = "subswap-provider-codex"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "subswap Codex / ChatGPT provider"
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
subswap-core.workspace = true

anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
directories.workspace = true
chrono.workspace = true
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
