[package]
name = "subswap-provider-kimi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
subswap-core = { workspace = true }
subswap-provider-common = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
directories = { workspace = true }

[dev-dependencies]
tempfile = "3"
